--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
     <tr>
         <td>
             <figure>
-                <img src="image_1.png" alt="Diwali Festival" title="Diwali celebration" width="250" height="180">
+                <img src="image_1.jpg" alt="New year" title="New year" width="250" height="180">
                 <figcaption>Diwali Festival 2024</figcaption>
             </figure>
         </td>
         <td>
             <figure>
-                <img src="image_2.png" alt="Ramadan" title="Ramadan celebration" width="250" height="180">
+                <img src="image_2.jpg" alt="Christmas" title="Christmas" width="250" height="180">
                 <figcaption>Ramadan 2025</figcaption>
             </figure>
         </td>
         <td>
             <figure>
-                <img src="image_3.png" alt="Easter" title="Easter celebration" width="250" height="180">
+                <img src="image_3.jpg" alt="Easter" title="Easter celebration" width="250" height="180">
                 <figcaption>Easter 2025</figcaption>
             </figure>
         </td>
